Update to use Math.clamp()