@@ -119,7 +119,7 @@ public class IntakePivot extends SubsystemBase {
 
   public void setAngle(Angle angle) {
     m_desiredAngle =
-        Degrees.of(Math.max(PIVOT.minAngle.in(Degrees), Math.min(PIVOT.maxAngle.in(Degrees), angle.in(Degrees))));
+        Degrees.of(Math.clamp(angle.in(Degrees), PIVOT.minAngle.in(Degrees), PIVOT.maxAngle.in(Degrees)));
   }
 
   @Logged(name = "Pivot Setpoint", importance = Importance.INFO)
